# naf

./: .gitignore  Makefile  default.nix  flake.nix
libnaf/: Makefile
libnaf/lib/: libnaf.h
libnaf/src/: .files.c.swp  compressor.c  files.c  files.h  input.c  nafio.c  nafio.h  output.h  process.h  utils.c  utils.h
libnaf_rust/: Cargo.toml  README.md
libnaf_rust/src/: fasta.rs  files.rs  io.rs  lib.rs  libennaf.rs  libnaf.h  libunnaf.rs  nafobj.rs  util.rs
libnaf_rust/src/nafobj/: datablock.rs  nafheader.rs  varlenint.rs
