[lib]
name = "libnaf_rust"
crate-type = ["rlib", "cdylib"]

[package]
name = "libnaf_rust"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.85"
serde = "1.0.164"
bio = "1.3.1"
phf = {version="0.11.2", features=["macros"]}
huffman-coding = "0.1.2"
snafu = "0.7.5"
zstd = "0.12.4"


